[project]
name = "site-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.4.26",
    "faiss-cpu>=1.11.0",
    "fake-useragent>=2.2.0",
    "html2text>=2025.4.15",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "lxml>=5.4.0",
    "openai>=1.77.0",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
]
